--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-  "name": "modi-react-server",
-  "version": "1.0.0",
-  "description": "A simple Node.js server.",
-  "main": "server.js",
-  "scripts": {
-    "start": "nodemon server.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "type": "module",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "express-session": "^1.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.14.2",
-    "nodemon": "^3.1.10",
-    "path": "^0.12.7"
-  }
+    "name": "modi-react-server",
+    "version": "1.0.0",
+    "description": "A simple Node.js server.",
+    "main": "server.js",
+    "scripts": {
+        "start": "nodemon server.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "type": "module",
+    "dependencies": {
+        "cors": "^2.8.5",
+        "dotenv": "^17.2.1",
+        "express": "^5.1.0",
+        "express-session": "^1.18.2",
+        "fs": "^0.0.1-security",
+        "jsonwebtoken": "^9.0.2",
+        "multer": "^2.0.2",
+        "mysql2": "^3.14.2",
+        "nodemon": "^3.1.10",
+        "path": "^0.12.7"
+    }
 }
